--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "date-fns": "^2.21.1",
     "node-fetch": "^2.6.1",
     "puppeteer": "^9.0.0",
     "puppeteer-extra": "^3.1.18",
