--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cheerz-archiver",
-  "version": "0.1.0",
+  "version": "0.1.0-beta",
   "description": "",
   "bin": "cli.js",
   "scripts": {
