--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cheerz-archiver",
-  "version": "0.2.1-beta",
+  "version": "0.2.2-beta",
   "description": "",
   "bin": "cli.js",
   "scripts": {
@@ -31,10 +31,6 @@
   },
   "pkg": {
     "scripts": "utils/**/*.js",
-    "outputPath": "dist",
-    "targets": [
-      "node14-win-x64",
-      "node14-macos-x64"
-    ]
+    "outputPath": "dist"
   }
 }
