--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "ink-text-input": "^4.0.1",
     "node-fetch": "^2.6.1",
     "puppeteer-core": "^9.0.0",
+    "puppeteer-interceptor": "^2.2.0",
     "react": "^17.0.2",
     "write-aac-metadata": "^1.0.5"
   },
